Mise à jour BDD - RGPD conforme

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /lumavenv
-# /bdd
-# .env
-# **/__pycache__/
-# db/
-# *.lock
-# *.wt
-# *.ns
-# *.log
+/bdd
+.env
+**/__pycache__/
+db/
+*.lock
+*.wt
+*.ns
+*.log
